--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 <Head></Head>
 <body>
     <h1>Hola Grupo 48</h1>
-    <p>Este proyecto consiste en una aplicación dirigida principalmente a jóvenes, pero cualquier
+    <p>
+        Este proyecto consiste en una aplicación dirigida principalmente a jóvenes, pero cualquier
         persona podrá hacer uso de ella, en la cual los usuarios podrán interactuar de forma
         anónima con otros usuarios con la intención de recibir un apoyo emocional, una opinión, un
         consejo etc. Esta app también contará con personas especializadas en esta área como
