Add list articulos

--- a/django/templates/layout/header.html
+++ b/django/templates/layout/header.html
@@ -45,6 +45,9 @@
     <nav class="headerNav">        
         <a href="/fonts">Fuentes</a>
         <a href="/tareas">Lista de tareas</a>
+        <a href="/articulos">Articulos</a>
+
         <a href="/calculo/2000/2050">Calculo 2000, 2050</a>
+
     </nav>
 </header>
