--- a/django/templates/articulos/articulos.html
+++ b/django/templates/articulos/articulos.html
@@ -2,16 +2,25 @@
 
 {% block head %}
 <title>***Articulos***</title>
+
 {% endblock %}
 
 {% block main %}
 <section class="addArticulo">
 	<h2>Formularios par articulos</h2>
 	<form action="/addarticulo" method="get">
+		
 		<label>Ingrese el nombre del articulo:
 			<input type="text" name="nombre"></label><br>
+		
 		<label>Ingrese la seccion del articulo:
-			<input type="text" name="seccion"></label><br>
+			<input list='secciones' type="text" name="seccion"></label><br>
+			<datalist id="secciones">
+				{% for secc in secciones %}
+					<option value="{{secc}}"></option>
+				{%endfor%}
+			</datalist>
+		
 		<label>Ingrese el precio del articulo:
 			<input type="number" name="precio"></label><br>
 
@@ -19,15 +28,15 @@
 	</form>
 </section>
 
-{% if articulos %}
 <section class="searchArticulo">
-	<form action="/searcharticulo">
-		<input type="text" name="snombre">
+	<form action="/articulos">
+		<input type="text" name="search">
 		<input type="submit" value="Buscar">
 		<!-- <label>Seccion:<input type="text" name="sseccion"></label>
 		<label>Precio:<input type="number" name="sprecio"></label> -->
 	</form>
 </section>
+{% if articulos %}
 <section class="readArticulo">
 	{% for art in articulos %}
 	<div class="articulo">
@@ -35,8 +44,8 @@
 		<div class="seccion">{{art.seccion}}</div>
 		<div class="precio">{{art.precio}}</div>
 	</div>
+	{%endfor%}
 </section>
-{%endfor%}
 {%endif%}
 
 {% endblock %}
