--- a/django/templates/articulos/articulos.html
+++ b/django/templates/articulos/articulos.html
@@ -2,14 +2,14 @@
 
 {% block head %}
 <title>***Articulos***</title>
-
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+<link rel="stylesheet" href="/static/css/articulos.css">
 {% endblock %}
 
 {% block main %}
 <section class="addArticulo">
 	<h2>Formularios par articulos</h2>
-	<form action="/addarticulo" method="get">
-		
+	<form action="/art/addarticulo/" method="post">{% csrf_token %}
 		<label>Ingrese el nombre del articulo:
 			<input type="text" name="nombre"></label><br>
 		
@@ -28,21 +28,17 @@
 	</form>
 </section>
 
-<section class="searchArticulo">
-	<form action="/articulos">
-		<input type="text" name="search">
-		<input type="submit" value="Buscar">
-		<!-- <label>Seccion:<input type="text" name="sseccion"></label>
-		<label>Precio:<input type="number" name="sprecio"></label> -->
-	</form>
-</section>
 {% if articulos %}
 <section class="readArticulo">
 	{% for art in articulos %}
-	<div class="articulo">
-		<div class="nombre">{{art.nombre}}</div>
-		<div class="seccion">{{art.seccion}}</div>
-		<div class="precio">{{art.precio}}</div>
+	<div class="card">
+		<div class="card-body">
+		  <h5 class="card-title">{{art.nombre}}</h5>
+		  <h6 class="card-subtitle mb-2 text-muted">{{art.seccion}}</h6>
+		  <p class="card-text">$ {{art.precio}}</p>
+		  <a href="/articulos/edit/{{art.nombre}}" class="card-link"><img src="/static/img/edit.svg." alt="edit"></a>
+		  <a href="/articulos/delete/{{art.nombre}}" class="card-link"><img src="/static/img/delete.svg." alt="delete"></a>
+		</div>
 	</div>
 	{%endfor%}
 </section>
