--- a/django/templates/layout/layout.html
+++ b/django/templates/layout/layout.html
@@ -16,7 +16,7 @@
 <body>
     {%include "layout/header.html"%}
     <main>
-        {%include "layout/alerts.html"%}
+        {%include "layout/messages.html"%}
         {% block main %} {% endblock %}
     </main>
     {%include "layout/footer.html"%}
