--- a/django/templates/index.html
+++ b/django/templates/index.html
@@ -1,19 +1,25 @@
-{% extends "layout/layout.html" %}
+<!DOCTYPE html>
+<html lang="es">
 
-{% block head %}
-<title>***Video***</title>
-{% endblock %}
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href="/static/css/bootswatch/Darkly.min.css"> -->
+    <link rel="stylesheet" href="/static/css/bootswatch/Sketchy.min.css">
+    <link rel="stylesheet" href="/static/css/global.css">
+    {% block head %} {% endblock %}
+</head>
 
-{% block main %}
+<body>
+    {%include "layout/header.html"%}
+    <main>
+        {%include "layout/messages.html"%}
+        {% block main %} {% endblock %}
+    </main>
+    {%include "layout/footer.html"%}
+</body>
 
-{% if nombre %}
-<h2>El articulo {{nombre}} pertenece a la seccion {{seccion}}</h2>
-{% endif%}
-
-{% for var in vardict %}
-    <p>var</p>
-{% endfor %}
-
-<h2>Video del profe garcia</h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/SavAmyic_J4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-{% endblock %}
+</html>
