add forms valid

--- a/django/templates/layout/header.html
+++ b/django/templates/layout/header.html
@@ -12,39 +12,33 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/fonts">Fonts</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/learn/fonts">Fonts</a></li>
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Models
+                            Modelos
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                             <li><a class="dropdown-item" href="/gestor/articulos">Articulos</a></li>
                             <li><a class="dropdown-item" href="/gestor/usuarios">Usuarios</a></li>
                             <li><a class="dropdown-item" href="/gestor/clientes">Clientes</a></li>
-                            <li><a class="dropdown-item" href="/tareas">Tareas</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="/calculo/2000/2050">Calculo 2000, 2050</a></li>
+                            <li><hr class="dropdown-divider"></li>
                         </ul>
                     </li>
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Documentacion
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                            <li><a class="dropdown-item" href="/learn/calculo/2000/2050">Calculo 2000, 2050</a></li>
+                            <li><a class="dropdown-item" href="/learn/tareas">Tareas</a></li>
+                            <li><a class="dropdown-item" href="/learn/videos">Videos</a></li>
+                            <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="/docu/inicio-jupyter">inicio-jupyter</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="/calculo/2000/2050">Calculo 2000, 2050</a></li>
                         </ul>
                     </li>
                     <!-- <li class="nav-item">
