--- a/django/templates/layout/footer.html
+++ b/django/templates/layout/footer.html
@@ -1,13 +1,17 @@
 <style>
-    footer {
-        background-color: #777;
-        padding: 10px;
+    footer{
         text-align: center;
-        color: white;
+        background-color: rgb(95, 158, 160,0.37);
+        /* width: 100%; */
+        /* box model */
+        margin: 0px;
+        padding:30px;
+        /* Transformaciones */
+        text-transform:uppercase;
     }
 </style>
 <footer>
-    <h2>
-        Este es el footer de la pagina django
-    </h2>
+   <h3>Este es el footer incluido con django</h3>
+    <p>Author: Juan Linares</p>
+    <p><a href="mailto:juanlinares.ruta1@utp.edu.co">juanlinares.ruta1@utp.edu.co</a></p>
 </footer>
