--- a/django/templates/index.html
+++ b/django/templates/index.html
@@ -7,16 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href="/static/css/bootswatch/Darkly.min.css"> -->
-    <link rel="stylesheet" href="/static/css/bootswatch/Sketchy.min.css">
+
+    {% if theme %}
+        <link rel="stylesheet" href="/static/css/bootswatch/{{theme}}.min.css">
+    {% else %}
+        <link rel="stylesheet" href="/static/css/bootswatch/bootstrap.min.css">
+    {% endif %}
     <link rel="stylesheet" href="/static/css/global.css">
     {% block head %} {% endblock %}
 </head>
 
 <body>
-    {%include "layout/header.html"%}
+    {%include "layout/bootstrap/header.html"%}
     <main>
-        {%include "layout/messages.html"%}
+        {%include "layout/bootstrap/messages.html"%}
         {% block main %} {% endblock %}
     </main>
     {%include "layout/footer.html"%}
